--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,10 @@ android {
 }
 
 dependencies {
-    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
+    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15to18', version: '1.68'
+    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
 
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
